fixed spacing issue with list

--- a/style.css
+++ b/style.css
@@ -232,6 +232,12 @@ main section #name {
   margin-top: 5px;
 }
 
+label{
+  display:block;
+  margin-top:-31.5px;
+  margin-left:24px;
+}
+
 h3 {
   font-family: 'Saira Extra Condensed', sans-serif;
   color: darkgrey;
